# document_processor

./: pyproject.toml
backend/app/: celery_worker.py  main.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py
backend/app/routers/: batch_processing.py  documents.py  tasks.py
backend/app/schemas/: document.py
backend/app/services/: file_service.py  pdf_service.py
frontend/: streamlit_app.py
